# bevy-aseprite-integration

./: Cargo.toml  generate.sh
assets/: basic_bomb.ase  basic_bomb.aseprite  basic_bomb.json
src/: main.rs
